# jammdb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: db1.rs  db2.rs
src/: bucket.rs  bytes.rs  cursor.rs  data.rs  db.rs  errors.rs  freelist.rs  lib.rs  meta.rs  node.rs  page.rs  page_node.rs  tx.rs
src/fs/: memfile.rs  mod.rs
tests/: deletes.rs  iterators.rs  multiple_buckets.rs  multiple_txs.rs  random_tests.rs  simple_inserts.rs
tests/common/: mod.rs  record.rs
