[package]
name = "jammdb"
description = "An embedded single-file database for Rust"
version = "0.8.5"
authors = ["PJ Tatlow <pjtatlow@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pjtatlow/jammdb"
readme = "README.md"
keywords = ["db", "database", "embedded-database", "memory-map"]
categories = ["database", "database-implementations"]

exclude = [
    ".*.yml",
    ".github/*",
    "ci/*",
    "tests/*",
    "makefile",
]

[dependencies]
sha3 = { version = "0.10.0", default-features = false,features = ["oid"] }
core2 = {version="0.4.0",default-features = false, features = ["nightly"]}
bumpalo = "3"
hashbrown = "0.12.0"
spin = "0.9.2"
lazy_static = "1.4.0"
#logger = {path= "../../os-module/logger"}
bytes = { version = "1", features = ["serde"] }




[dev-dependencies]
rand = "0.8"
rmp-serde = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[badges]
codecov = { repository = "pjtatlow/jammdb" }
appveyor = { repository = "pjtatlow/jammdb" }
maintenance = { status = "actively-developed" }
